<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_text_fr"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="38dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/top_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_top_genres_text"
        app:layout_constraintStart_toStartOf="@id/search_text"
        app:layout_constraintTop_toBottomOf="@id/search_text"
        android:layout_marginTop="11dp"
        android:textColor="@color/black"/>

    <ImageView
        android:contentDescription="@string/rock_rect_desc"
        android:id="@+id/rock_genre"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:src="@drawable/myrect_red"
        app:layout_constraintTop_toBottomOf="@id/top_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/metal_genre"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="6dp"
        android:layout_marginVertical="6dp"/>

    <ImageView
        android:contentDescription="@string/metal_rect_desc"
        android:id="@+id/metal_genre"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:src="@drawable/myrect_grey"
        app:layout_constraintTop_toBottomOf="@id/top_genres"
        app:layout_constraintStart_toEndOf="@id/rock_genre"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="6dp"
        android:layout_marginVertical="6dp"/>

    <ImageView
        android:contentDescription="@string/latin_rect_desc"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:src="@drawable/myrect_fucsia"
        android:id="@+id/latin_genre"
        app:layout_constraintTop_toBottomOf="@id/rock_genre"
        app:layout_constraintStart_toStartOf="@id/rock_genre"
        android:layout_marginVertical="12dp"
        app:layout_constraintEnd_toStartOf="@id/pop_genre"
        android:layout_marginEnd="6dp"/>

    <ImageView
        android:contentDescription="@string/pop_rect_desc"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:src="@drawable/myrect_purple"
        android:id="@+id/pop_genre"
        app:layout_constraintTop_toBottomOf="@id/rock_genre"
        app:layout_constraintStart_toEndOf="@id/latin_genre"
        app:layout_constraintEnd_toEndOf="@id/metal_genre"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="6dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_text"
        app:layout_constraintStart_toStartOf="@id/rock_genre"
        app:layout_constraintTop_toTopOf="@id/rock_genre"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metal_text"
        app:layout_constraintStart_toStartOf="@id/metal_genre"
        app:layout_constraintTop_toTopOf="@id/metal_genre"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latin_text"
        app:layout_constraintStart_toStartOf="@id/latin_genre"
        app:layout_constraintTop_toTopOf="@id/latin_genre"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_text"
        app:layout_constraintStart_toStartOf="@id/pop_genre"
        app:layout_constraintTop_toTopOf="@id/pop_genre"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>