<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LibraryFragment">

    <ImageView
        android:contentDescription="@string/person_icon_desc"
        android:id="@+id/person_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="38dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/person_icon"
        app:layout_constraintTop_toTopOf="@id/person_icon"
        app:layout_constraintStart_toEndOf="@id/person_icon"
        android:text="@string/your_library_text"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"/>

    <ImageButton
        android:contentDescription="@string/add_button_desc"
        android:id="@+id/add_song"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/person_icon"
        app:layout_constraintBottom_toBottomOf="@id/person_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/add_icon"
        style="?android:attr/buttonBarButtonStyle"
        android:minHeight="24dp"
        android:minWidth="24dp"
        android:layout_marginEnd="24dp"/>

    <ImageView
        android:contentDescription="@string/search_icon_desc"
        android:id="@+id/search_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/add_song"
        app:layout_constraintBottom_toBottomOf="@id/add_song"
        app:layout_constraintEnd_toStartOf="@id/add_song"
        android:src="@drawable/search_icon"
        android:layout_marginEnd="12dp"/>

    <ImageView
        android:contentDescription="@string/sort_icon_desc"
        android:id="@+id/sort_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/person_icon"
        app:layout_constraintStart_toStartOf="@id/person_icon"
        android:src="@drawable/ic_sort"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/sort_lists"
        app:layout_constraintBottom_toBottomOf="@id/sort_lists"
        app:layout_constraintStart_toEndOf="@id/sort_lists"
        android:text="@string/most_recent_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:layout_marginStart="18dp"/>

    <ImageView
        android:contentDescription="@string/favs_box_desc"
        android:id="@+id/favs_box"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/sort_lists"
        app:layout_constraintStart_toStartOf="@id/sort_lists"
        android:src="@drawable/my_favs_rect"
        android:layout_marginTop="18dp"/>
    <ImageView
        android:contentDescription="@string/favs_icon_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/favs_box"
        app:layout_constraintBottom_toBottomOf="@id/favs_box"
        app:layout_constraintStart_toStartOf="@id/favs_box"
        app:layout_constraintEnd_toEndOf="@id/favs_box"
        android:src="@drawable/fav_icon"/>

    <TextView
        android:id="@+id/liked_songs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liked_songs_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/favs_box"
        app:layout_constraintBottom_toTopOf="@id/number_liked_songs"
        app:layout_constraintStart_toEndOf="@id/favs_box"
        android:layout_marginStart="12dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/number_liked_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_songs"
        app:layout_constraintTop_toBottomOf="@id/liked_songs_text"
        app:layout_constraintBottom_toBottomOf="@id/favs_box"
        app:layout_constraintStart_toStartOf="@id/liked_songs_text"
        android:textSize="13sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>